updates htmls and css files
feature image sizing issues resolved

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 							</nav> <!-- .feature-nav -->
 
 							<div class="feature-text">
-								<img src="http://unsplash.it/200">
+								<div class="feature-text-pic">
+									<img src="http://unsplash.it/150">
+								</div>
 								<p>Dolores nostrum necessitatibus excepturi obcaecati quod id autem nobis eveniet cupiditate possimus.</p>
 							</div> <!-- .feature-text -->
 						</div> <!-- .flex-even-item -->
