--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Digital Design Agency">
 	<title>Fekra</title>
 	<!-- GOOGLE FONTS -->
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900|Roboto:400,500,700,900' rel='stylesheet' type='text/css'>
